# GNNv2

./: CMakeLists.txt  README.md  pastabos.md
docs/: ARCHITECTURE.md  CITATION_BENCHMARK_2026-06-23.md  GNNv2_HANDOFF.md  GNNv3_RC1_HANDOFF.md  GNNv3_RC1_REPORT.md  HDC_STREAM.md  NONLINEAR_ENGINE.md  PERFORMANCE.md  PHYSICS_ONLY_DISCIPLINE.md  RESULTS.md  SCALING_AND_QUBITS.md  SEMANTIC_WORD_SUBSTRATE.md  STREAMING_THROUGHPUT_HANDOFF.md  WAVE_FIDELITY.md  WORD_TO_SIGNAL_RECIPE.md
research/: CORA_DATA.md  README.md  probe_coriolis_observe.cpp  probe_dynamic_flux.cpp  probe_flow_microbench.cpp  probe_graph_stream_only.cpp  probe_linear_stream.cpp  probe_nonlinear_engine.cpp  probe_nonlinear_soliton.cpp  probe_order_value.cpp  probe_soliton_memory.cpp  probe_spectral_order.cpp  probe_spin_precession.cpp  probe_streaming_compression.cpp  probe_streaming_word_plasticity_speed.cpp  probe_streaming_word_value.cpp  probe_substrate_value.cpp  probe_word_decode.cpp  semantic_sparse_text8.hpp
scripts/: run_tests.ps1
tools/: README.md  graph_wave_dual_feeling_substrate_contract_test.cpp  graph_wave_flux_plaquette_diagnostic_test.cpp  graph_wave_horizon_densification_contract_test.cpp  graph_wave_kerr_entanglement_contract_test.cpp  graph_wave_linear_cayley_flow_contract_test.cpp  graph_wave_pure_physics_chain_contract_test.cpp  graph_wave_semantic_superposition_phase_contract_test.cpp  graph_wave_semantic_word_substrate_contract_test.cpp  graph_wave_streaming_word_plasticity_contract_test.cpp  graph_wave_substrate.hpp  graph_wave_synchronous_phase_field_contract_test.cpp  qubit_physics.hpp
